author name simplified

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "svelte",
     "component"
   ],
-  "author": "matteo.abrate@gmail.com",
+  "author": "nitaku",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/webvis/anymapper/issues"
