--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "workbench.colorCustomizations": {
-        "titleBar.activeBackground": "#ff0afe",
-        "activityBar.background": "#bb641d"
+        "activityBar.background": "#8f4f1c"
     }
 }
