vscode color bar updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#8f4f1c"
+        "activityBar.background": "#2a3ca5"
     }
 }
